@@ -1,21 +1,26 @@
 package actividades;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
 
 public class Actividad1_4_2 {
     public static void main(String[] args) throws IOException {
-        String javaFilePath = "actividades.Actividad1_4_2";
-        String name = "Daniel";
-        //Process process = Runtime.getRuntime().exec("java -cp " + javaFilePath + " " + name);
-        Process process = new ProcessBuilder("java " + javaFilePath + " " + name).start();
-        InputStream inputStream = process.getInputStream();
-        BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
-        String line;
-        while ((line = reader.readLine()) != null) {
-            System.out.println(line);
+        File directory = new File("out/production/LanzarProcesos/");
+        ProcessBuilder pb = new ProcessBuilder("java", "actividades.Actividad1_4", "Daniel");
+        pb.directory(directory);
+        System.out.printf("Directorio de trabajo: %s", pb.directory());
+        Process p = pb.start();
+        try {
+            InputStream is = p.getInputStream();
+            int c;
+            while ((c = is.read()) != -1){
+                System.out.print((char) c);
+            }
+            is.close();
+            int exitCode = p.waitFor();
+            System.out.println("El proceso ha terminado con código de salida: " + exitCode);
+        } catch (Exception e){
+            e.printStackTrace();
         }
+
     }
 }
